@@ -2627,6 +2627,7 @@ enum MACROCALLTYPE
 	MCT_PANELSORT          = 12,
 	MCT_GETCUSTOMSORTMODES = 13,
 	MCT_ADDMACRO           = 14,
+	MCT_FARCOMMANDLINE     = 15,
 };
 
 enum MACROPLUGINRETURNTYPE
