@@ -1,4 +1,13 @@
-﻿zg 02.05.2014 03:16:49 +0200 - build 3884
+﻿shmuel 03.05.2014 17:51:18 +0200 - build 3885
+
+1. Экспериментально:
+   Перед обработкой комстроки Фар передаёт её плагину LuaMacro, который вызывает глобальную функцию
+   ProcessFarCommandLine(CmdLine), если таковая существует. Если функция не существует, либо возвращает
+   false/nil/ничего, Фар продолжает обработку комстроки. Если возвращает стринг, то Фар обрабатывает
+   его как новое значение комстроки. Если возвращает true, дальнейшая обработка комстроки Фаром не
+   производится.
+
+zg 02.05.2014 03:16:49 +0200 - build 3884
 
 1. откат 3883.
 
@@ -13,7 +22,7 @@ svs 28.04.2014 16:43:42 +0400 - build 3882
    - добавлены XC_ALREADY_EXISTS, XC_OPEN_NEWINSTANCE и XC_RELOAD.
    - в FileEditor уточнение по кодам возврата в зависимости от EF_OPENMODE_*
    - в API::Editor новые коды возврата пока не позиционируются (ограничены макросом MANTIS_0002562);
-     есть вероятность поломки плагинов ("архивных"), которые ожидают только EEC_OPEN_ERROR, EEC_MODIFIED и EEC_NOT_MODIFIED. 
+     есть вероятность поломки плагинов ("архивных"), которые ожидают только EEC_OPEN_ERROR, EEC_MODIFIED и EEC_NOT_MODIFIED.
      (хотя... EEC_LOADING_INTERRUPTED уже "в строю" :-))
 
 svs 28.04.2014 15:11:54 +0400 - build 3881
