@@ -1,4 +1,13 @@
-﻿shmuel 02.05.2014 23:00:20 +0200 - build 324
+﻿shmuel 03.05.2014 17:51:18 +0200 - build 325
+
+1. Экспериментально:
+   Перед обработкой комстроки Фар передаёт её плагину LuaMacro, который вызывает глобальную функцию
+   ProcessFarCommandLine(CmdLine), если таковая существует. Если функция не существует, либо возвращает
+   false/nil/ничего, Фар продолжает обработку комстроки. Если возвращает стринг, то Фар обрабатывает
+   его как новое значение комстроки. Если возвращает true, дальнейшая обработка комстроки Фаром не
+   производится.
+
+shmuel 02.05.2014 23:00:20 +0200 - build 324
 
 1. Командная строка: если в `lua: <code>` или `moon: <code>`
    `<code>` начинается с символа `=`, то вызывается `far.Show()`, например:
